@@ -2,6 +2,10 @@ $Id$
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+
+- Add csrf-magic for CSRF protection in webGUI. Note: all modifying GETs in
+  webGUI still need to be replaced by POSTs for this to be effective.
+
 - Fix ip address for modem on status page.
 
 - Update build scripts and patches for FreeBSD 8.3 and bump version to 1.8.1
